--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-secrets-of-black-arts_71924
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71924-h/images/cover.jpg
 creator:
   author:
     agent_name: Anonymous
@@ -12,6 +15,8 @@ creator:
     - https://en.wikipedia.org/wiki/Anonymous_work
     - http://www.gutenberg.org/ebooks/author/49
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71924#The-secrets-of-black-arts
 gutenberg_issued: '2023-10-21'
 identifiers:
   gutenberg: '71924'
